# TextIndexing

./: .gitignore  README.md  taq
EvaluationResults/preprocessing/: all.txt  dna.txt  english.txt  sources.txt
EvaluationResults/query/repeat/: all.txt  dna.txt  english.txt  sources.txt
EvaluationResults/query/topk/: all.txt  byQueryLength.txt  byQueryLengthSmall.txt  dna.txt  english.txt  sources.txt
Framework/: CMakeLists.txt  HowToUse.md  main.cpp
Framework/Helpers/: RepeatProfiler.h  Timer.h  TopKProfiler.h
Framework/NaiveSuffixTree/: Node.h  SuffixTree.h
Framework/Query/: RepeatQuery.h  TopKQuery.h
Framework/SuffixTree/: Helpers.h  Node.h  SuffixTree.h
Framework/TestFiles/: topK-trivial.txt
Framework/UkkonenSuffixTree/: Node.h  SuffixTree.h
Presentation/: textIndexingPresentation.ipe
Presentation/fig/: kitColors.tex  preprocesing.tex  repeatQuery.tex  test.ipe  topkQuery.tex  topkQueryByLength.tex  topkQueryByLengthSmall.tex  transferTimeSavingsData.txt
Presentation/outline/: lipics-v2021.cls  presentationOutline.aux  presentationOutline.blg  presentationOutline.tex  presentationOutline.vtc  projectPlanLiterature.bib
Presentation/outline/fig/: ae-cycle-basic.ipe
TestFiles/: algorithmRepeat.txt  dnaRepeat-100k.txt  dnaTopK-100k.txt  repeat-trivial.txt  repeat.txt  topK-trivial.txt  topKFaust.txt  topk-debug.txt  topk.txt
TestFiles/official/: repeats-1.txt  topk-1.txt  topk-2.txt
TestFiles/old/: algorithmTopK.txt  dnaRepeat-10k.txt  dnaRepeat-1k.txt  dnaTopK.txt  repeatDebug.txt  repeatFaust-1MB.txt  topKFaust-1MB.txt
